--- a/formulario/formulario_compra.html
+++ b/formulario/formulario_compra.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="formulario.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 </head>
-<body>
-    <div class="container-fluid">
+<body class="fondo-principal">
+    <div class="container-fluid" >
         <center>
-            <div id="div">
+            <div id="div" class="contenedor_prin">
                 <form action="POST">
                     <div class="row">
                         <h2>Contacto</h2>
@@ -33,7 +33,7 @@
                     <br>
                     <div class="row">
                         <div class="col-md-6">
-                            <input class="col-md-12" type="text" placeholder="Nombre(opcional)">
+                            <input class="col-md-12" type="text" placeholder="Nombre(opcional)" required>
                         </div>
                         <div class="col-md-6">
                             <input class="col-md-12" type="text" placeholder="Apellido">
@@ -42,16 +42,16 @@
                     <br>
                     <div class="row">
                         <div class="col-md-9">
-                            <input class="col-md-12" type="text" placeholder="Direccion completa">
+                            <input class="col-md-12" type="text" placeholder="Direccion completa" required>
                         </div>
                         <div class="col-md-3">
-                            <input class="col-md-12" type="text" placeholder="Codigo postal">
+                            <input class="col-md-12" type="text" placeholder="Codigo postal" required>
                         </div>
                     </div>
                     <br>
                     <div class="row">
                         <div class="col-md-12">
-                            <input class="col-md-12" type="text" placeholder="Telefono">
+                            <input class="col-md-12" type="text" placeholder="Telefono" required>
                         </div>
                     </div>
                     <br>
@@ -59,9 +59,9 @@
                         <h2>Pago</h2>
                         <p><i>Todas las transacciones son seguras y estan encriptadas</i></p>
                         <div class="col-md-12">
-                            <input type="radio">
+                            <input type="radio" name="tarjeta">
                             <label for="">Tarjeta de credito</label>
-                            <input type="radio" id="debito">
+                            <input type="radio" id="debito" name="tarjeta">
                             <label for="">Tarjeta de debito</label>
                         </div>
                     </div>
